# braille_radio

./: README.md  pyproject.toml
braille_radio/: base.py  config.py  confirm.py  filemanager.py  gui.py  indexing.py  loop.py  radiobrowse.py  rb_index.py
braille_radio/filemanager/: base.py  edit.py  favorites.py  filemanager.py  help.py  intro.py  main.py  newdir.py  view.py
braille_radio/statemachine/: state.py
tests/: test_braille_radio.py
